attempt 1 to fix submit button padding issue on mobile

--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -111,7 +111,7 @@ input[type="submit"] {
   margin-bottom: 10px;
   border: none;
   box-shadow: 0 5px 0px rgb(52, 189, 129);
-  padding: 17.5px 0 12.5px;
+  //padding: 17.5px 0 12.5px;
 }
 
 .tc {
